# Autonomous_Systems_Practical

./: README.md
Nao_Kick_2/: Nao_Kick_2.pml  manifest.xml
Nao_Kick_2/behavior_1/: behavior.xar
sudo/brain/src/: memory.py  sensorintegrator.py
sudo/brain/src/basebehavior/: abstractbehavior.py  behaviorimplementation.py
sudo/brain/src/behavior/aligngoal/: aligngoal_0.py
sudo/brain/src/behavior/alignkick/: alignkick_0.py
sudo/brain/src/behavior/alignmain/: alignmain_0.py
sudo/brain/src/behavior/approach/: approach_0.py
sudo/brain/src/behavior/approachkick/: approachkick_0.py
sudo/brain/src/behavior/findball/: findball_0.py
sudo/brain/src/behavior/searchmain/: searchmain_0.py
sudo/brain/src/body/: nao.py
sudo/brain/src/config/: behaviors_config  config_alignmain  config_approach  config_approachkick  config_mainbehavior  config_searchmain
sudo/ros/catkin_ws/src/borg_nao/: CMakeLists.txt  package.xml
sudo/ros/catkin_ws/src/borg_nao/launch/: borg_nao.launch  colorblob.launch  colorblob_real.launch  colorblob_sim.launch
sudo/ros/catkin_ws/src/borg_nao/scripts/: calibrator.py  editor.py  nao_video.py
sudo/ros/catkin_ws/src/borg_nao/src/: main.cc
sudo/ros/catkin_ws/src/borg_nao/src/colorblob/: colorblob.h  colorblob.ih  colorblob1.cc  findBlobs.cc  frame  newImageCB.cc  onMouse.cc  run.cc  sortObservations.cc  updateVisualState.cc  visualMode.cc  writeToMemory.cc
